@@ -4,7 +4,8 @@ module Lobbyist
     class EnterpriseSetting < Lobbyist::V2::Base
       attr_accessor :id, :enterprise_id, :location_license_fee, :location_activation_fee
       attr_accessor :location_termination_fee, :creation_fee, :reactivation_fee, :termination_fee
-      attr_accessor :misc_fee, :billing_email, :created_at, :updated_at
+      attr_accessor :misc_fee, :billing_email, :wants_member_calls, :billing_type, :full_access_allowed
+      attr_accessor :created_at, :updated_at
 
       def self.show(id, params = {})
         create_from_response(get("/v2/enterprise_settings/#{id}.json", params))
