@@ -1,3 +1,5 @@
+* New enterprise settings added to the EnterpriseSetting proxy mode.
+
 === 0.5.14 2014-09-03
 
 * Added request_support method to v2/company_user.rb
